Updated to build tags with absolute file locations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ if (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
     message(FATAL_ERROR "In-source builds are not allowed.")
 endif()
 
-install(DIRECTORY bin/ DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
+install(DIRECTORY bin/ DESTINATION ${CMAKE_INSTALL_PREFIX}/bin USE_SOURCE_PERMISSIONS)
